fix navbar z-index

--- a/components/NavBar/NavBar.module.scss
+++ b/components/NavBar/NavBar.module.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100vw;
   display: flex;
-  z-index: 1000;
+  z-index: 1000 !important;
   padding: 16px 24px;
   color: white;
   a {
